--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 3D Card hover effect (CSS only)</title>
+  <title>3D Card hover effect (CSS only)</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -17,6 +16,8 @@
     <figcaption>The Druid</figcaption>
 </figure>
 <!-- partial -->
-  
+  <!-- https://shashanktrivedi.com/project-portfolio/ -->
+
+
 </body>
 </html>
